Coverity analysis defect 156605: Data race condition

XMLWordPrintableJSON

    • Cluster Scalability
    • Fully Compatible
    • ALL
    • None
    • 3
    • TBD
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Data race condition

      The value of the shared data will be determined by the interleaving of thread execution. Thread shared data is accessed without holding an appropriate lock, possibly causing a race condition
      /data/mci/3b34054db808e84e865ea3adc167bb30/bazel_cache/8efb34a963653a257fe76e59a8ff65e9/execroot/_main/src/mongo/db/s/set_allow_migrations_coordinator.cpp:90: MISSING_LOCK 156605 Accessing "this->_doc" without holding lock "mongo::ShardingDDLCoordinatorImpl<mongo::SetAllowMigrationsCoordinatorDocument>._docMutex". Elsewhere, "mongo::ShardingDDLCoordinatorImpl<mongo::SetAllowMigrationsCoordinatorDocument>._doc" is written to with "ShardingDDLCoordinatorImpl._docMutex" held 1 out of 1 times.

              Assignee:
              Abdul Qadeer
              Reporter:
              Coverity Collector User
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: