SERVER-108625 Take mutex before accessing ShardingDDLCoordinator document (#39701)

GitOrigin-RevId: c27240ee7c1186519fa40863a58859786e4f0429